--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: page
 title: About my work
-subtitle: a bit about the science 
+subtitle: Testing
 use-site-title: true
 ---
 
-#testing 
